--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -11,3 +11,157 @@
     width: 400px;
   }
 }
+
+
+body {
+  height: 100%;
+}
+
+
+.app-wrap {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+
+.app-content, .app-sidebar {
+  overflow-y: scroll;
+  padding: 2em;
+}
+
+
+.app-content {
+  flex: 3;
+  position: relative;
+}
+
+
+.app-sidebar {
+  background: #ff6347;
+  flex: 1;
+  border-bottom: 1px solid #eee;
+  text-align: center;
+  padding-bottom: 0.5em;
+
+  nav {
+    font-family: 'Unica One', sans-serif;
+    //text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-bottom: 2rem;
+
+    >a {
+      display: block;
+      color: #fff;
+      text-decoration: none;
+      padding: 1em;
+      border: 1px solid #ff4726;
+      border-top: 0;
+
+      &:first-child{
+        border-top: 1px solid #ff4726;
+      }
+
+      &:hover {
+        background: #ff5537;
+      }
+    }
+
+    .active {
+      background: #ff5537;
+    }
+  }
+}
+
+
+@media (min-width: 800px) {
+
+  .app-wrap {
+    flex-direction: row;
+  }
+
+  .app-content {
+    order: 2;
+  }
+
+  .app-sidebar {
+    order: 1;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+//a {
+//    color: #3273dc;
+//    cursor: pointer;
+//    text-decoration: none;
+//}
+
+//
+//.app-main {
+//    min-height: 100vw;
+//    display: flex;
+//}
+//
+//
+//.app-aside {
+//    flex: 0 0 16vw;
+//    box-shadow: 0 0 1rem rgba(0,0,0,0.1);
+//    background: #fff;
+//
+//    h3 {
+//        text-align: center;
+//        background-color: black;
+//        color: white;
+//        margin: 0;
+//        line-height: 50px
+//    }
+//
+//    .menu-ul {
+//        list-style: none;
+//
+//        li{
+//            line-height: 25px;
+//            display: list-item;
+//        }
+//    }
+//}
+//
+//
+//.app-content {
+//    width: 100%;
+//    padding: 40px;
+//}
