--- a/src/components/item1/item1.scss
+++ b/src/components/item1/item1.scss
@@ -1,6 +1,13 @@
-#chart div {
+#chart1 div {
     display: inline-block;
     background: #4285F4;
     width: 20px;
+    margin-right: 3px;
+}
+
+#chart2 div {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
     margin-right: 3px;
 }
